--- a/Sex/Sex/Search.storyboard
+++ b/Sex/Sex/Search.storyboard
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Delegate-->
+        <!--Search View Controller-->
         <scene sceneID="O8t-kB-nvD">
             <objects>
                 <viewController id="V6F-OK-RrR" customClass="SearchViewController" sceneMemberID="viewController">
@@ -24,18 +24,18 @@
                                     <constraint firstAttribute="width" constant="80" id="6kS-FR-vYn"/>
                                     <constraint firstAttribute="height" constant="44" id="acV-c5-EMz"/>
                                 </constraints>
-                                <connections>
-                                    <outlet property="delegate" destination="V6F-OK-RrR" id="AI8-fD-rv1"/>
-                                </connections>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y11-hz-dKL">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y11-hz-dKL" customClass="HorizontailListView">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Wo-xI-oGU">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Wo-xI-oGU" customClass="SearchOptionsView">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="QNw-KP-p8J"/>
                                 </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Va4-fb-qEO" customClass="SearchResultListView">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.86666666670000003" green="0.86666666670000003" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -46,14 +46,21 @@
                             <constraint firstItem="Y11-hz-dKL" firstAttribute="leading" secondItem="ZkC-ej-DMN" secondAttribute="trailing" constant="5" id="DhM-gv-xhE"/>
                             <constraint firstItem="ZkC-ej-DMN" firstAttribute="top" secondItem="ljn-rN-ben" secondAttribute="bottom" id="M2H-mP-ojp"/>
                             <constraint firstItem="Y11-hz-dKL" firstAttribute="top" secondItem="ZkC-ej-DMN" secondAttribute="top" id="PTz-DL-2pc"/>
+                            <constraint firstAttribute="trailing" secondItem="Va4-fb-qEO" secondAttribute="trailing" id="X0S-gZ-Ae7"/>
+                            <constraint firstItem="Va4-fb-qEO" firstAttribute="top" secondItem="2Wo-xI-oGU" secondAttribute="bottom" constant="8" id="cuq-uq-uaI"/>
                             <constraint firstItem="2Wo-xI-oGU" firstAttribute="leading" secondItem="qsH-jS-huZ" secondAttribute="leading" id="gcl-tR-Nvg"/>
+                            <constraint firstAttribute="bottom" secondItem="Va4-fb-qEO" secondAttribute="bottom" constant="8" id="lA8-SB-vCa"/>
                             <constraint firstAttribute="trailing" secondItem="Y11-hz-dKL" secondAttribute="trailing" constant="5" id="tWF-OS-8Wk"/>
+                            <constraint firstItem="Va4-fb-qEO" firstAttribute="leading" secondItem="qsH-jS-huZ" secondAttribute="leading" id="wYf-VR-Jxl"/>
                             <constraint firstItem="2Wo-xI-oGU" firstAttribute="top" secondItem="Y11-hz-dKL" secondAttribute="bottom" constant="5" id="wey-JT-vuv"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="m7U-Ks-dSw"/>
                     <connections>
                         <outlet property="dropdownView" destination="ZkC-ej-DMN" id="snd-W9-cio"/>
+                        <outlet property="horizonalListView" destination="Y11-hz-dKL" id="JY9-us-lhu"/>
+                        <outlet property="searchOptions" destination="2Wo-xI-oGU" id="qKL-aa-odo"/>
+                        <outlet property="searchResultListView" destination="Va4-fb-qEO" id="RSm-VD-LC1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Gm-5a-Csw" userLabel="First Responder" sceneMemberID="firstResponder"/>
