--- a/Sex/Sex/Address.storyboard
+++ b/Sex/Sex/Address.storyboard
@@ -6,10 +6,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Addresses View Controller-->
+        <!--收货地址-->
         <scene sceneID="9Fn-wk-mKP">
             <objects>
-                <viewController storyboardIdentifier="AddressesViewController" id="LlM-Wr-uOl" customClass="AddressesViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddressesViewController" title="收货地址" id="LlM-Wr-uOl" customClass="AddressesViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="l4X-su-i97"/>
                         <viewControllerLayoutGuide type="bottom" id="Vsb-b6-zfC"/>
@@ -17,17 +17,28 @@
                     <view key="view" contentMode="scaleToFill" id="St1-bl-Xdq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EUT-h4-IlQ" customClass="EmptyShooppingCart">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="0.61321069979999998" blue="0.1309237003" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="EUT-h4-IlQ" secondAttribute="trailing" id="7Z1-qM-NqY"/>
+                            <constraint firstItem="EUT-h4-IlQ" firstAttribute="top" secondItem="l4X-su-i97" secondAttribute="bottom" constant="20" id="W6x-od-xuG"/>
+                            <constraint firstItem="Vsb-b6-zfC" firstAttribute="top" secondItem="EUT-h4-IlQ" secondAttribute="bottom" id="WEm-ZH-cj3"/>
+                            <constraint firstItem="EUT-h4-IlQ" firstAttribute="leading" secondItem="St1-bl-Xdq" secondAttribute="leading" id="kzv-67-HfR"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QYa-lr-20r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="220" y="247"/>
         </scene>
-        <!--Create Address View Controller-->
+        <!--新增收货地址-->
         <scene sceneID="IoP-dI-UQF">
             <objects>
-                <viewController storyboardIdentifier="CreateAddressViewController" id="V6J-Yc-7Ip" customClass="CreateAddressViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateAddressViewController" title="新增收货地址" id="V6J-Yc-7Ip" customClass="CreateAddressViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="E5c-jp-XU0"/>
                         <viewControllerLayoutGuide type="bottom" id="ake-9J-ODg"/>
