--- a/Sex/Sex/ResultItemCollectionViewCell.xib
+++ b/Sex/Sex/ResultItemCollectionViewCell.xib
@@ -1,22 +1,38 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ResultItemCollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="194" height="153"/>
+            <rect key="frame" x="0.0" y="0.0" width="160" height="231"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="194" height="153"/>
+                <rect key="frame" x="0.0" y="0.0" width="160" height="231"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我是Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DbF-iY-W7f">
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AvB-IW-yfP"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Jp-rG-piq">
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3F-GM-vLW">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BEN-Yj-Efm">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d9T-gb-zg4">
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -25,13 +41,26 @@
             </view>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="DbF-iY-W7f" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="imJ-XU-XSw"/>
-                <constraint firstAttribute="bottom" secondItem="DbF-iY-W7f" secondAttribute="bottom" constant="10" id="kJq-BN-Mlz"/>
-                <constraint firstAttribute="trailing" secondItem="DbF-iY-W7f" secondAttribute="trailing" constant="10" id="tjK-Az-5dI"/>
-                <constraint firstItem="DbF-iY-W7f" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="xz5-ob-ttc"/>
+                <constraint firstItem="9Jp-rG-piq" firstAttribute="trailing" secondItem="AvB-IW-yfP" secondAttribute="trailing" id="3BP-x1-hVn"/>
+                <constraint firstAttribute="trailing" secondItem="AvB-IW-yfP" secondAttribute="trailing" id="9i1-dy-h0h"/>
+                <constraint firstItem="d9T-gb-zg4" firstAttribute="trailing" secondItem="AvB-IW-yfP" secondAttribute="trailing" id="LYe-Sf-ETF"/>
+                <constraint firstItem="AvB-IW-yfP" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="NHu-YP-tL1"/>
+                <constraint firstItem="d9T-gb-zg4" firstAttribute="leading" secondItem="AvB-IW-yfP" secondAttribute="leading" id="NTr-JV-0tB"/>
+                <constraint firstItem="9Jp-rG-piq" firstAttribute="bottom" secondItem="gTV-IL-0wX" secondAttribute="bottomMargin" id="Z7E-BJ-JWE"/>
+                <constraint firstItem="9Jp-rG-piq" firstAttribute="leading" secondItem="AvB-IW-yfP" secondAttribute="leading" id="exi-aM-W9m"/>
+                <constraint firstItem="AvB-IW-yfP" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="0.6" id="hVg-mp-KBQ"/>
+                <constraint firstItem="I3F-GM-vLW" firstAttribute="top" secondItem="d9T-gb-zg4" secondAttribute="bottom" constant="31.5" id="nb7-2b-aih"/>
+                <constraint firstItem="d9T-gb-zg4" firstAttribute="top" secondItem="AvB-IW-yfP" secondAttribute="bottom" constant="11" id="pga-IR-kwh"/>
+                <constraint firstItem="AvB-IW-yfP" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="wDo-Xq-ozl"/>
             </constraints>
-            <size key="customSize" width="194" height="153"/>
-            <point key="canvasLocation" x="126" y="111.5"/>
+            <size key="customSize" width="160" height="231"/>
+            <connections>
+                <outlet property="contentLabel" destination="d9T-gb-zg4" id="atT-ST-6OG"/>
+                <outlet property="imageView" destination="AvB-IW-yfP" id="L8m-21-FyN"/>
+                <outlet property="priceLabel" destination="I3F-GM-vLW" id="FFo-2Y-x65"/>
+                <outlet property="salesLabel" destination="BEN-Yj-Efm" id="c5T-zQ-bT4"/>
+            </connections>
+            <point key="canvasLocation" x="109" y="72.5"/>
         </collectionViewCell>
     </objects>
 </document>
